--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ PyMuPDF>=1.22.3
 python-docx>=0.8.11
 pydantic>=2.0.0
 jinja2>=3.1.2
+streamlit
+google-generativeai
+faiss-cpu
+numpy
+pymupdf
+sentence-transformers
